tests/baselines/reference/getJavaScriptSyntacticDiagnostics7.baseline
// === Syntax Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics7.ts':
/tests/cases/fourslash/a.js(1,11): error TS8006: 'namespace' declarations can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    namespace M { }
              ~
!!! error TS8006: 'namespace' declarations can only be used in TypeScript files.